# FlowMDM

./: .gitignore  README.md  pixi.toml  pyproject.toml
data_loaders/humanml/utils/: plot_script.py
explain/: BUG-matplotlib-rendering.md  about-3d-model-keypoint-topology.md  about-flowmdm-output-format.md  about-path-conditioned-generation.md  about-smpl-usage-in-flowmdm.md  howto-export-smpl-params-and-convert-to-smplx.md  howto-interpret-flowmdm-output.md  howto-retain-root-translation-in-smplx-visualization.md  survey-Path-Retargeting-of-Human-Motion-Clips.md
runners/: generate-ex.py  generate.py
tests/: README.md
tests/simple-walk/: generate_simple_walk.ps1  simple_walk_instructions.json
visualization/: show-animation-smplx.py  show-animation.py
win64-scripts/: README.md  download_all.ps1  download_glove.ps1  download_pretrained_models.ps1  download_smpl_files.ps1  download_t2m_evaluators.ps1
